# OpenSLM

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  slm_architecture_zoo_blueprint.md
.github/workflows/: ci.yml
PRD/: PRD.md
configs/: base.yaml
configs/bitnet_config/: base.yaml
configs/config_template/: base.yaml
configs/deepseek_moe_config/: base.yaml
configs/experiments/: exp_001_baseline.yaml
configs/gemma3_config/: base.yaml
configs/jamba_config/: base.yaml
configs/llama_config/: base.yaml
configs/mamba_config/: base.yaml
configs/model/: gpt_medium.yaml  gpt_small.yaml  gpt_tiny.yaml
configs/retnet_config/: base.yaml
configs/rwkv_config/: base.yaml
configs/training/: default.yaml
models/: __init__.py
models/_template/: __init__.py  config.py  model.py
models/gpt/: __init__.py  model.py
notebooks/: 01_data_exploration.ipynb  02_architecture_lab.ipynb  03_training_monitor.ipynb  04_generation_demo.ipynb  05_experiment_compare.ipynb  experiment_compare.ipynb
notebooks/00_template/: 01_data_exploration.ipynb  02_architecture_lab.ipynb  03_training_monitor.ipynb  04_generation_demo.ipynb
notebooks/01_miniGPT/: 01_data_exploration.ipynb  03_training_monitor.ipynb  04_generation_demo.ipynb
notebooks/02_llama/: 02_architecture_lab.ipynb  03_training_monitor.ipynb  04_generation_demo.ipynb
notebooks/03_mamba/: 01_data_exploration.ipynb  02_architecture_lab.ipynb  03_training_monitor.ipynb  (+1 more)
reports/: 00_code_design.md  01_architecture_zoo.md  02_gpt.md  03_llama.md  04_bitnet.md  05_retnet.md  06_deepseek_moe.md  07_jamba.md  08_mamba.md  09rwkv.md  10_compare.md  11_gemma3.md  11_output.md  bitnet.md  deepseek_moe.md  gpt.md  jamba.md  llama.md  mamba.md  rwkv.md  technical_design.md
scripts/: run_data_prep.sh  run_inference.sh  run_training.sh
src/: __init__.py
tests/: conftest.py  test_rwkv_wkv_scan.py  test_tuning.py
(+206 files in other folders)
